src/components/UI/Layout/Navigation/SideDrawer/SideDrawer.module.css
.UserIcon {
  width: 32px;
}

.Popper {
  z-index: 1500;
}

.Popper > div > button {
  padding: 10px 30px 10px 10px !important;
  text-transform: none !important;
}

.StaffIcon {
  width: 32px;
}

.DrawerIcons {
  width: 100px;
}

.StaffButton {
  width: 100% !important;
}

.GlificLogo {
  display: flex;
  align-items: center;
  width: 52px;
}

.AnotherToolBar {
  padding: 12px 16px;
}

.Drawer {
  z-index: 1000;
  width: 203px;
  flex-shrink: 0;
  white-space: nowrap;
}

.NavClose {
  width: 92px;
}

.DrawerOpen {
  width: 203px;
  transition: width 255ms !important;
}

.DrawerClose {
  transition: width 255ms !important;
  width: 92px;
  overflow-x: hidden;
}

.Toolbar {
  display: flex;
}

.Content {
  flex-grow: 1;
  padding: 24px;
}

.OuterBox {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.Title {
  align-self: center;
}

.ClosedIcon {
  margin: 12px 12px 12px 15px;
}

.BottomMenus {
  z-index: 1;
  position: absolute;
  bottom: 50px;
  display: flex;
  width: 100%;
  padding-left: 4px;
}

.BottomMenus > div {
  margin: 0 6px;
}

.BottomMenusWithoutWallet {
  bottom: 15px;
}

.BottomMenusVertical {
  flex-flow: column;
}

.DrawerContent {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.BannerWrapper {
  padding: 8px 12px;
  margin-bottom: 8px;
}

.AskGlificMenu {
  padding: 1rem;
  background: #f0f7f1;
  border-radius: 0.8rem;
  font-weight: 500;
  font-size: 0.8rem;
  color: #119656;
  margin: 0.5rem;
  display: flex;
  align-items: center;
  gap: 1rem;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .NavClose {
    width: 0px;
  }

  .DrawerClose {
    width: 0px;
  }

  .Drawer {
    width: clamp(120px, 30vw, 203px);
    white-space: normal;
  }

  .DrawerOpen {
    width: clamp(120px, 30vw, 203px);
    overflow-x: hidden;
  }
}

